prevent panes from wrapping

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
 #wrapper {
     width: fit-content;
     height: fit-content;
+    white-space: nowrap;
     margin: 5em auto;
 }
 
